# diffusion-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  app_latent_diffusion.py  export_onnx.py  generate_images.py  pyproject.toml
.github/workflows/: deploy-pages.yml
benchmarks/: fid_latent_diffusion.txt
data/cat_model/: ldm-final.pt  vae-ema-final.pt
data/latent_diffusion_model/unet/: ldm-final.json  ldm-final.safetensors
data/latent_diffusion_model/vae/: vae-ema-final.json  vae-ema-final.safetensors
diffusers/: __init__.py
diffusers/basic_model/: schedulers.py  train.py
diffusers/basic_model/callbacks/: __init__.py
diffusers/basic_model/models/: diffusion_model.py  unet.py
diffusers/dit/: __init__.py  model.py
diffusers/latent_diffusion/: __init__.py  flow_latent_diff.py  latent_diffusion.py  train.py  train_flow.py
diffusers/vae/: __init__.py  model.py  train.py  vae.py
notebooks/: run_latent_diffusion.ipynb
scripts/: evaluate_fid.py  upload_models_to_hf.py
webapp/: README.md
webapp/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
webapp/frontend/app/: globals.css  layout.tsx  page.tsx
webapp/frontend/lib/: asset-path.ts  diffusion-onnx.ts  empty-module.js  wasm-loader.ts
webapp/frontend/public/wasm/: diffusion_wasm.d.ts  diffusion_wasm.js  diffusion_wasm_bg.wasm  diffusion_wasm_bg.wasm.d.ts  package.json
webapp/frontend/scripts/: sync-models.js
