[tool.poetry]
name = "diffusion-pytorch"
version = "0.1.0"
description = "This module contains code to test diffusion model on pytorch."
authors = ["Thibaut CHAUFFIER <tchauffi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "diffusers", from = "./"}
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
pytorch-lightning = "^2.4.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
requests = "^2.32.3"
datasets = "^3.1.0"
einops = "^0.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
