[tool.poetry]
name = "diffusion-pytorch"
version = "0.1.0"
description = "This module contains code to test diffusion model on pytorch."
authors = ["Thibaut CHAUFFIER <tchauffi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "diffusers", from = "./"}
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = {version = "^2.9.1", source = "pytorch-cu130"}
torchvision = {version = "^0.24.1", source = "pytorch-cu130"}
pytorch-lightning = "^2.4.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
requests = "^2.32.3"
datasets = "^3.1.0"
einops = "^0.8.0"
gradio = "^6.2.0"
timm = "^1.0.22"
safetensors = "^0.7.0"
torchmetrics = "^1.8.2"

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
pre-commit = "^4.0.1"
tensorboard = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
